templates/loft-agent_template.yaml
---
# Source: loft-agent/templates/apiservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: loft-agent-apiservice
  namespace: default
  labels:
    app: release-name-loft-agent
    chart: "loft-agent-3.2.4"
    release: "release-name"
    heritage: "Helm"
spec:
  ports:
    - name: apiservice
      port: 443
      targetPort: 8443
      protocol: TCP
  selector:
    app: release-name-loft-agent
    release: release-name
---
# Source: loft-agent/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loft-agent
  namespace: default
  labels:
    app: release-name-loft-agent
    loft.sh/service: release-name-loft-agent
    chart: "loft-agent-3.2.4"
    release: "release-name"
    heritage: "Helm"
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 
      protocol: TCP
    - name: https
      port: 443
      targetPort: 10443
      nodePort: 
      protocol: TCP
    - name: wakeup
      port: 9090
      targetPort: 9090
      protocol: TCP
  selector:
    app: release-name-loft-agent
    release: release-name
---
# Source: loft-agent/templates/webhook.yaml
apiVersion: v1
kind: Service
metadata:
  name: loft-agent-webhook
  namespace: default
  labels:
    app: release-name-loft-agent
    chart: "loft-agent-3.2.4"
    release: "release-name"
    heritage: "Helm"
spec:
  type: ClusterIP
  ports:
    - name: webhook
      port: 443
      targetPort: 9443
      protocol: TCP
  selector:
    app: release-name-loft-agent
    release: release-name
---
# Source: loft-agent/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-loft-agent
  namespace: default
  labels:
    app: "loft-agent"
    chart: "loft-agent-3.2.4"
    release: "release-name"
    heritage: "Helm"
spec:
  selector:
    matchLabels:
      app: release-name-loft-agent
      release: release-name
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: release-name-loft-agent
        release: release-name
    spec:
      terminationGracePeriodSeconds: 10
      serviceAccountName: loft-agent
      volumes:
      containers:
      - name: agent
        image: "ghcr.io/loft-sh/agent:3.2.4"
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 10443
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          failureThreshold: 20
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          failureThreshold: 20
          initialDelaySeconds: 5
          periodSeconds: 10
        volumeMounts:
        resources:
          limits:
            cpu: "2"
            memory: 4Gi
          requests:
            cpu: 200m
            memory: 256Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          runAsNonRoot: true
---
# Source: loft-agent/templates/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: loft-agent
